# shorturl-cli

./: README.md  pyproject.toml
shorturl/: __main__.py  commands.py  utils.py
tests/: test_cli.py
